tests/ui/deny_missing_docs.stderr
error: unsupported attribute
  --> $DIR/deny_missing_docs.rs:60:5
   |
60 |     #[allow(missing_docs)]
   |     ^^^^^^^^^^^^^^^^^^^^^^
